@@ -995,6 +995,7 @@ extern void menu_tape_settings_trunc_name(char *orig,char *dest,int max);
 
 extern int menu_confirm_yesno(char *texto_ventana);
 extern int menu_confirm_yesno_texto(char *texto_ventana,char *texto_interior);
+extern int menu_confirm_yesno_texto_additional_item(char *texto_ventana,char *texto_interior,char *(*texto_adicional)(void),void (*funcion_trigger_texto_adicional) (void) );
 //extern int menu_ask_no_append_truncate_texto(char *texto_ventana,char *texto_interior);
 extern int menu_simple_two_choices(char *texto_ventana,char *texto_interior,char *opcion1,char *opcion2);
 extern int menu_simple_three_choices(char *texto_ventana,char *texto_interior,char *opcion1,char *opcion2,char *opcion3);
