@@ -1,3 +1,10 @@
+Version XI - xxxx edition. 25 September 2023
+
+Allow to not save configuration when exiting ZEsarUX
+
+----
+
+
 Version X - 10th Anniversary edition. 24 September 2023
 
 This is a special edition to celebrate the 10 years old of ZEsarUX. Version is called "X" (actually is version 10.10)
